force-app/main/objects/NVM_Keys__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AuthenticationURL__c</fullName>
        <label>AuthenticationURL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Service__c</fullName>
        <label>PCI_Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecretId__c</fullName>
        <label>SecretId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_AuthenticationURL__c</fullName>
        <label>US_AuthenticationURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_PCI_Service__c</fullName>
        <label>US_PCI_Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>NVM Keys</label>
</CustomObject>